--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -1,3 +1,12 @@
-<p>
-  admin works!
-</p>
+<div class="flex justify-center flex-wrap add-margin container">
+  <mat-card routerLink="users" class="add-margin">
+    <mat-card-title>Users</mat-card-title>
+  </mat-card>
+  <mat-card routerLink="items" class="add-margin">
+    <mat-card-title>POS Items</mat-card-title>
+  </mat-card>
+
+
+</div>
+
+<router-outlet></router-outlet>
