--- a/src/app/home/reports/line-chart/line-chart.component.html
+++ b/src/app/home/reports/line-chart/line-chart.component.html
@@ -1,3 +1,5 @@
-<p>
-  line-chart works!
-</p>
+<mat-card *ngIf="isDataAvailable">
+  <canvas baseChart width="400" height="400" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
+    [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" (chartHover)="chartHovered($event)"
+    (chartClick)="chartClicked($event)"></canvas>
+</mat-card>
