--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,13 +1,10 @@
 <div color="primary" class="navbar flex flex-direction-row align-items-center">
   <div class="flex flex-direction-row titles">
-    <h1 routerLink="/welcome" class="title add-margin">Angular Material POS</h1>
-    <h2 class="subtitle add-margin">Demo point-of-sale built using Angular 4, Material, and Firebase.</h2>
+    <h1 routerLink="/welcome" class="title add-margin">BankservAfrica Canteen POS</h1>
+    <h2 class="subtitle add-margin">Payments facilitated by the new Rapid Payments Interface (RPI)</h2>
   </div>
 
-
-  <button mat-icon-button [matMenuTriggerFor]="menu" class="menu">
-    <mat-icon>more_vert</mat-icon>
-  </button>
+  <button mat-icon-button [matMenuTriggerFor]="menu" class="menu"><mat-icon>more_vert</mat-icon></button>
 </div>
 
 <!-- Mobile Menu -->
