--- a/src/app/admin/items/items.component.html
+++ b/src/app/admin/items/items.component.html
@@ -4,9 +4,7 @@
     <p>Edit and add items for sale below.</p>
   </div>
 
-  <div class="add-margin">
-    <button mat-raised-button (click)="addItemToggle()">Add Item</button>
-  </div>
+  <div class="add-margin"><button mat-raised-button (click)="addItemToggle()">Add Item</button></div>
 
   <mat-card *ngIf="addItemActive" class="add-margin">
     <mat-card-title>Add Item</mat-card-title>
@@ -14,24 +12,28 @@
       <form class="form">
         <!-- Name -->
         <mat-form-field>
-          <input matInput placeholder="Name:" value="Item 1" name="name" [(ngModel)]="newItemName">
+          <input matInput placeholder="Name:" value="Item 1" name="name" [(ngModel)]="newItemName" />
         </mat-form-field>
         <!-- Price -->
         <mat-form-field>
-          <input matInput placeholder="Price ($):" type="number" value="3.25" name="value" [(ngModel)]="newItemPrice">
+          <input matInput placeholder="Price ($):" type="number" value="3.25" name="value" [(ngModel)]="newItemPrice" />
         </mat-form-field>
         <!-- Product type dropdown -->
         <mat-form-field>
           <mat-select placeholder="Product type:" name="productType" [(ngModel)]="newItemType">
-            <mat-option *ngFor="let type of productTypes" [value]="type">
-              {{type}}
-            </mat-option>
+            <mat-option *ngFor="let type of productTypes" [value]="type"> {{ type }} </mat-option>
           </mat-select>
         </mat-form-field>
 
         <label for="upload" class="file-upload__label">Upload Image</label>
-        <input id="upload" class="file-upload__input" type="file" name="file-upload" accept="image/*" (change)="detectFiles($event)">
-
+        <input
+          id="upload"
+          class="file-upload__input"
+          type="file"
+          name="file-upload"
+          accept="image/*"
+          (change)="detectFiles($event)"
+        />
       </form>
     </mat-card-content>
     <!-- Save/Cancel -->
@@ -44,36 +46,31 @@
   <!-- List of products in database -->
   <mat-accordion *ngFor="let type of products" class="add-margin">
     <!-- Item Panel -->
-    <mat-expansion-panel *ngFor="let item of type | async">
+    <mat-expansion-panel *ngFor="let item of (type | async)" hideToggle>
       <mat-expansion-panel-header>
-        <mat-panel-title>{{item.name}}</mat-panel-title>
-        <mat-panel-description>{{item.item_type}}</mat-panel-description>
+        <mat-panel-title>{{ item.name }}</mat-panel-title>
+        <mat-panel-description>{{ item.item_type }}</mat-panel-description>
       </mat-expansion-panel-header>
       <!-- Edit form -->
       <form class="form">
         <!-- Name -->
-        <mat-form-field>
-          <input #name matInput placeholder="Name:" value="{{item.name}}">
-        </mat-form-field>
+        <mat-form-field> <input #name matInput placeholder="Name:" value="{{ item.name }}" /> </mat-form-field>
         <!-- Price -->
         <mat-form-field>
-          <input #price matInput type="number" placeholder="Price ($):" value="{{item.price}}">
+          <input #price matInput type="number" placeholder="Price ($):" value="{{ item.price }}" />
         </mat-form-field>
         <!-- Product type dropdown -->
         <mat-form-field>
-          <mat-select #type placeholder="{{item.item_type}}" value="{{item.item_type}}">
-            <mat-option *ngFor="let type of productTypes" [value]="type">
-              {{type}}
-            </mat-option>
+          <mat-select #type placeholder="{{ item.item_type }}" value="{{ item.item_type }}">
+            <mat-option *ngFor="let type of productTypes" [value]="type"> {{ type }} </mat-option>
           </mat-select>
         </mat-form-field>
         <!-- Product image -->
         <!-- <hr> -->
         <h3>Product image:</h3>
         <div class="flex flex-direction-row product-image-section">
-          <img class="product-image" src="{{item.img_url}}">
+          <img class="product-image" src="{{ item.img_url }}" />
         </div>
-
       </form>
       <!-- Save/Delete buttons -->
       <mat-action-row>
@@ -82,5 +79,4 @@
       </mat-action-row>
     </mat-expansion-panel>
   </mat-accordion>
-
 </div>
