--- a/src/app/home/ticket/ticket.component.html
+++ b/src/app/home/ticket/ticket.component.html
@@ -8,18 +8,23 @@
       <th>Modify</th>
     </tr>
     <tr *ngFor="let item of ticket" class="item">
-      <td>{{item.quantity}}</td>
-      <td>{{item.name}}</td>
-      <td>{{item.price | currency:'USD':true}}</td>
+      <td>{{ item.quantity }}</td>
+      <td>{{ item.name }}</td>
+      <td>{{ item.price | currency: 'ZAR':'R' }}</td>
       <td>
-        <mat-icon (click)="addItem(item)" class="del">control_point</mat-icon>
-        <mat-icon (click)="subtractOne(item)" class="del">indeterminate_check_box</mat-icon>
-        <mat-icon (click)="removeItem(item)" class="del">cancel</mat-icon>
+        <mat-grid-list cols="3" rowHeight="3:1">
+          <mat-grid-tile> <mat-icon (click)="addItem(item)" class="del">control_point</mat-icon> </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-icon (click)="subtractOne(item)" class="del">indeterminate_check_box</mat-icon>
+          </mat-grid-tile>
+          <mat-grid-tile> <mat-icon (click)="removeItem(item)" class="del">cancel</mat-icon> </mat-grid-tile>
+        </mat-grid-list>
       </td>
     </tr>
   </table>
+
   <mat-card-actions class="summary flex flex-direction-row align-items-center justify-between">
-    <h3 class="total">Total: {{cartTotal | currency:'USD':true}}</h3>
+    <h3 class="total">Total: {{ cartTotal | currency: 'ZAR':'R' }}</h3>
     <div class="flex flex-direction-row buttons">
       <button class="" mat-raised-button (click)="clearCart()">Clear</button>
       <button class="checkout" mat-raised-button (click)="checkout()">Checkout</button>
